Fix layout issues

--- a/src/scss/presale.scss
+++ b/src/scss/presale.scss
@@ -34,11 +34,13 @@ body, html {
 }
 
 .background {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+
+  overflow: hidden;
 
   opacity: 0.82;
 
@@ -49,6 +51,8 @@ body, html {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  margin-bottom: 30px;
 
   &__info {
     font-size: 26px;
